[project]
name = "agentcore-iam-script"
version = "0.1.0"
description = "Fetches AgentCore service reference and classifies IAM actions by subservice"
requires-python = ">=3.13"
dependencies = ["boto3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
